LICENSE and main.c added

--- a/core/meson.build
+++ b/core/meson.build
@@ -6,7 +6,8 @@ project('OuiWisp', 'c',
 
 sources = [
   'src/lexer.c',
-  'src/parser.c'
+  'src/parser.c',
+  'src/ggc.c'
 ]
 
 executable('OuiWisp', 
